--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -11,4 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Run tests
-      run: xcodebuild test -scheme MijickCamera -destination 'platform=iOS Simulator,OS=18.0,name=iPhone 16 Pro'
+      run: xcodebuild test -scheme Kamera -destination 'platform=iOS Simulator,OS=18.0,name=iPhone 16 Pro'
